# DICEE

./: .env.example  .gitignore  README.md  alembic.ini  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.cursor/rules/: architecture.mdc  integrations.mdc  roadmap-and-worklog.mdc  tech-stack.mdc  user-actions.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_fix_timestamp_nullable.py  003_add_content_hash_and_manual_edit.py  004_add_hashtags_and_user_calendar_unique.py  005_refactor_schema.py  006_add_crawl_runs.py  007_add_user_refresh_token_version.py  008_notice_indexes_and_gin.py  009_add_notice_ai_status.py  010_add_notice_list_composite_index.py  011_add_crawl_runs_celery_task_id_unique.py  534657f22f86_add_published_at_to_notice.py
app/: __init__.py  main.py  worker.py
app/api/: health.py  internal.py
app/core/: __init__.py  config.py  crawl_http.py  crawler_config.py  database.py  database_sync.py  deps.py  redis.py
app/models/: __init__.py  base.py  college.py  crawl_run.py  notice.py  user.py  user_calendar_event.py
app/repositories/: __init__.py  college_repository.py  crawl_run_repository.py  notice_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: __init__.py  auth_service.py  tasks.py  (+1 more)
docs/: CAUTIONS.md  DEPLOYMENT.md  ROADMAP.md  ROADMAP_PHASES.md  WORK_LOG.md
scripts/: check_notices.py  delete_notices_for_rerun.py  reset_db.py  seed_colleges.py  test_crawler.py
tests/: conftest.py  test_auth_service.py  test_health.py
(+11 files in other folders)
